--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -1,11 +1,16 @@
 version: 0.2
 
+env:
+  variables:
+    S3_BUCKET: "aserputko-frontendmentor-todo-web"
+    CLOUDFRONT_DISTRIBUTION_ID: "E2LZRHO53SZ4RG"
+
 phases:
   install:
     runtime-versions:
       nodejs: 20
     commands:
-      - echo Installing dependencies...
+      - echo "Installing dependencies"
       - npm ci
 
   pre_build:
@@ -24,17 +29,8 @@ phases:
     commands:
       - echo Build completed
       - echo Deploying to S3...
-      - aws s3 sync ./dist s3://aserputko-frontendmentor-todo-web --delete
-      - |
-        aws s3 sync ./dist s3://aserputko-frontendmentor-todo-web \
-          --cache-control "public, max-age=31536000" \
-          --exclude "*.html" \
-          --exclude "service-worker.js"
-      - |
-        aws s3 sync ./dist s3://aserputko-frontendmentor-todo-web \
-          --cache-control "public, max-age=0, must-revalidate" \
-          --include "*.html" \
-          --include "service-worker.js"
+      - aws s3 sync ./dist s3://$S3_BUCKET/ --delete --cache-control "public, max-age=300"
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
       - echo Deployment completed successfully
 
 artifacts:
