--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -28,10 +28,10 @@ phases:
   post_build:
     commands:
       - echo Build completed
-      - echo Deploying to S3...
-      - aws s3 sync ./dist s3://$S3_BUCKET/ --delete --cache-control "public, max-age=300"
-      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
-      - echo Deployment completed successfully
+      # - echo Deploying to S3...
+      # - aws s3 sync ./dist s3://$S3_BUCKET/ --delete --cache-control "public, max-age=300"
+      # - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
+      # - echo Deployment completed successfully
 
 artifacts:
   files:
