--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - echo "Installing dependencies"
       - npm ci
 
-  test:
+  pre_build:
     commands:
       - echo Running linting...
       - echo npm run lint
@@ -22,6 +22,10 @@ phases:
       - echo Building the project...
       - echo npm run build
       - npm run build
+      
+
+  post_build:
+    commands:
       - echo Build completed
 
 
